--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -17,5 +17,7 @@ jobs:
           go-version: ${{ matrix.go-version }}
       - name: Checkout
         uses: actions/checkout@v3
+      - name: Change workdir
+        run: go work use .
       - name: Run Test
         run: go test -v ./...
