--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -1,13 +1,14 @@
-name: Test
-
+name: golangci-lint
 on: [push, pull_request]
-
+permissions:
+  contents: read
 jobs:
-  test:
+  golangci:
     strategy:
       matrix:
-        go-version: [1.18.x, 1.19.x]
+        go-version: [1.19.x]
         os: [ubuntu-latest]
+    name: lint
     runs-on: ${{ matrix.os }}
     steps:
       - name: Set up Go ${{ matrix.go-version }}
@@ -18,5 +19,5 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
 
-      - name: Run Test
-        run: go test -v ./...
+      - name: Run golangci-lint
+        uses: golangci/golangci-lint-action@
