--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,9 +1,12 @@
-name: Test
+name: golangci
 
 on: [push, pull_request]
 
+permissions:
+  contents: read
+
 jobs:
-  test:
+  golangci:
     strategy:
       matrix:
         go-version: [1.19.x]
@@ -18,5 +21,8 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
 
+      - name: Run golangci-lint
+        uses: golangci/golangci-lint-action@v3
+
       - name: Run Test
-        run: go test -v ./...
+        run: go test -cover -v ./...
